# agentic-support-bot-demo

./: .env.example  .gitignore  .marimo-state.json  MANUAL_TESTING.md  README.md  STEP_4_EVALUATION.md  SUBPROCESS_SOLUTION.md  custom.css  main.py  marimo-guide.py  playground_server.py  pyproject.toml  test_main.py  tools.py  tyler-chat-config.yaml
.cursor/rules/: directive-core-protocol.mdc
.cursor/servers/: directive.sh
.github/workflows/: test.yml
directive/cursor/: mcp.json
directive/reference/: agent_context.md  agent_operating_procedure.md
directive/reference/templates/: impact_template.md  implementation_summary_template.md  spec_template.md  tdr_template.md
directive/specs/20251010-tyler-agent-foundation/: spec.md  tdr.md
directive/specs/20251011-tyler-chat-cli/: IMPLEMENTATION_SUMMARY.md  spec.md
directive/specs/20251020-tyler-playground-api/: impact.md  spec.md
directive/specs/20251021-iterate-tool-descriptions/: tdr.md
directive/specs/20251029-step-4-dataset-and-evaluation/: spec.md
directive/specs/20251029-support-tools-persistence/: spec.md
directive/specs/20251031-production-deployment/: impact.md  spec.md  tdr.md
examples/step-1/: main.py
examples/step-2/: basic-agent-config.yaml  main.py  tyler-chat-config.yaml
examples/step-2a-basic-agent/: tyler-chat-config.yaml
examples/step-2b-with-tools/: tools.py  tyler-chat-config.yaml
examples/step-3/: playground_server.py  server.py  tools-agent-config.yaml  tools.py  tyler-chat-config.yaml
examples/step-3-complete/: tools.py  tyler-chat-config.yaml
examples/step-4/: dataset.py  scorers.py  support-agent-config.yaml  tools.py  tyler-chat-config.yaml
examples/step-4-complete/: accuracy-judge-config.yaml  judge-config.yaml  publish_dataset.py  run_evaluation.py  safety-judge-config.yaml  scorers.py
examples/step-5/: README.md  publish_dataset.py  run_evaluation.py  scorers.py  server.py
examples/step-6/: config.json  fixed_moderation_scorer.py  publish_agent.py  run_local.py  server.py  test_weave_agent.py  tools.py
examples/step-7/: server.py  tools.py
helpers/: README.md  __init__.py  isolated_agent_runner.py  isolated_eval_runner.py  marimo_helpers.py
tests/: conftest.py  test_dataset.py  test_guardrails.py  test_isolated_agent_runner.py  test_main.py  test_marimo_helpers.py  test_playground_server.py  test_scorers.py  test_server.py  test_tools.py
(+44 files in other folders)
