[project]
name = "agentic-support-bot"
version = "0.1.0"
description = "Agentic support bot powered by Tyler agent with issue management tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "directive>=0.0.9",
    "slide-lye>=0.1.0",
    "weave>=0.51.0",
    "python-dotenv>=1.0.0",
    "slide-tyler>=2.0.4",
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.37.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pyyaml>=6.0.3",
]
