[project]
name = "agentic-support-bot"
version = "0.1.0"
description = "Agentic support bot powered by Tyler agent with issue management tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "directive>=0.0.9",
    "slide-lye>=6.0.0",
    "weave>=0.52.20",
    "python-dotenv>=1.0.0",
    "slide-tyler>=6.0.0",
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.37.0",
    "tinydb>=4.8.0",
    "modal>=0.64.0",
    # Step 6: Guardrails using Weave's built-in scorers
    "torch>=2.0.0", # Required for WeaveToxicityScorerV1
    "transformers>=4.30.0", # Required for local ML models
    "sentencepiece>=0.1.99", # Required for tokenization
    "protobuf>=3.20.0", # Required for model loading
    # Marimo: Interactive tutorial guide
    "marimo>=0.18.1",
    "ruamel-yaml>=0.18.16",
    "slide-narrator>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=0.23.0",  # Required for async guardrail tests
    "pyyaml>=6.0.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"  # Automatically detect and run async tests
asyncio_default_fixture_loop_scope = "function"
